# kaloQdNA

./: CITATION.cff  LICENSE  README.md  add_license_headers.py  pyproject.toml
compiler/backend/: circuit_manager.py  dna_generator.py  dnaa_generator.py  reaction_scheduler.py
compiler/bio_editing/: crispr.py  diagram
compiler/bio_editing/templates/: knockout.json
compiler/frontend/: parser.py
compiler/quantum/: qoperations.py
compiler/utils/: constants.py  protocol_generator.py  vienna_integration.py
docs/tutorials/: doc
protocols/dry_lab/: hybrid_pcr.json
sensors/agricultura/cana_de_acucar/: field_test.py
simulations/examples/: integrated_example.py
simulations/hybrid/: quantum_pcr.py
simulations/noteboos/: pcr_simulator.ipynb
tests/backend/: test_dna_generator.py
tests/quantum/: test_qdna_encoder.py
